关于我们页面修改

--- a/application/index/view/about/index.html
+++ b/application/index/view/about/index.html
@@ -21,12 +21,42 @@
 			</div>
 
 			<div class="aboutour_ear inner-wrap">
-                 <div class="aboutour_center">
-                       <p class="aboutour_logo"><img style="width:100px;height:auto; margin-top:25px; " src="{$web_setting.web_logo}"></p>
-                 	   <p class="about_us">关于我们</p>
-                 	   <p class="text1">致力于让中国人受益于指导和理解的自己的基因组数据，现在主要的服务内容包括基于基因组数据的组源分析，个性化的运动和减肥建议，营养基因组学，基因组医学等方面的内容，未来，我们会跟合作伙伴一起把基因组数据推向每一个被基因所影响的角落。</p>
-                 	   <p class="text2">这是我们的初衷，也是我们的未来，让自己更加了解自己，并联合大家一起不断的了解自己！解读基因的秘密，遇见未来的自己。</p>
-                 </div>
+                <div class="aboutour_center">
+                   <div class="aboutour_logo">
+                   		<img src="{$web_setting.web_logo}">	
+                   </div>
+             	   <h2 class="about_us">关于我们</h2>
+             	   <p class="text1">“族内”致力于传承和弘扬中华姓氏及家谱家风文化，利用现代基因技术、互联网科技并结合历史研究为全球华人提供寻根服务。让每一个华人都能知其源，兴其家，聚其族，爱其国。通过文化溯源基因寻根，来凝聚全球华人为中华民族伟大复兴汇聚力量。</p>
+             	   <p class="text2">“族内”基因检测涵盖祖源、遗传风险、遗传特质等内容的数百个项目。“族内”设“中华姓氏基因研究中心”，“族内”与安龙基因成为战略合作伙伴，实验室卫健委审批具备临床医学检验实验室资质，占地1000㎡的医学检验中心，拥有多项自主知识产权专利技术，年检测能力达到20万人份。</p>
+                </div>
+                
+                <div class="detail_wrap">
+                	<div class="title">
+                		<h2>简介</h2>
+                	</div>
+                	<div class="date">
+                		<p>“族内”目前主要服务内容包括基因检测、基于基因组数据的祖源分析，个性化的健康、营养基因组学、基因组医学等方面的内容。面向中国人提供基因检测服务，开展全球华人姓氏基因数据分析业务。公司依托互联网+基因检测，构建生命大数据库，以“姓氏基因传承，凝聚中华民族”为使命，打造一家专业姓氏基因研究，值得信赖的科技企业。</p>
+                	</div>
+                </div>
+                
+                <div class="detail_wrap">
+                	<div class="title">
+                		<h2>业务</h2>
+                	</div>
+                	<div class="date">
+                		<p>基于领先的基因组学科研成果，“族内”专业Y-STR自动匹配分型系统为平台，致力于建立全球华人姓氏基因大数据库，寻根溯源，传承凝聚中华民族。联合专业化的生物检测中心，使用全球领先的检测设备进行测序，由遗传学团队进行检测分析，专业姓氏基因文化的专家团队为顾问。</p>
+                	</div>
+                </div>
+                
+                <div class="detail_wrap">
+                	<div class="title">
+                		<h2>产品</h2>
+                	</div>
+                	<div class="date">
+                		<p>“族内”基因检测涵盖祖源、遗传风险、遗传特质等内容的数百个项目。技术支持为： 安龙基因和清华大学医学院共同发起成立的高科技生物医药企业，实验室具备临床医学检验所正式批文，拥有多项自主知识产权专利技术。</p>
+                	</div>
+                </div>
+                
 			</div>
 			<!--底部-->
 			<div class="footer">
