--- a/public/static/index/css/about/about.css
+++ b/public/static/index/css/about/about.css
@@ -1,55 +1,70 @@
 .aboutour_ear{
-	
+	padding: 80px 0;
 	background: white;
-	height: 500px;
-	margin-top: 100px;
-	border-radius: 10px;
-	margin-bottom: 100px;
-	
-	
 }
-.aboutour_center{
-	
-	width: 750px;
-	margin: auto;
-	/*border: 1px solid green;*/
-	text-align: center;
-
+.aboutour_center p {
+	padding: 0 100px;
+	margin: 0 0 10px;
+	font-size: 18px;
 }
-.aboutour_logo{
-	
-	height: 130px;
-	line-height: 130px;
-	
-	
+.aboutour_logo {
+	margin: 0 auto 15px;	
+	width: 100px;
+	height: 100px;
+}
+.aboutour_logo img {
+	display: block;
+	margin: 0 auto;
+	max-width: 100%;
+	height: auto;
 }
 .about_us{
-	
+	margin: 0 0 20px;
 	font-size: 30px;
 	font-weight: bolder;
-	
-	
+	line-height: 65px;
+	text-align: center;
 }
-.text1,.text2{
-	
+.text1,.text2{	
 	text-align: left;
-	color: gray;
-	
-	
+	line-height: 25px;
+	color: #151515;
+	font-weight: bolder;
+	text-indent: 15px;
 }
 .text1{
-	
-	padding-top: 50px;
-	
-}
-.text2{
-	
-	padding-top: 20px;
-	
+	line-height: 23px;
 	
 }
-.footer{
+
+.detail_wrap {
+	padding: 0 70px;
+	margin: 35px 0 0;
+}
+.detail_wrap .title {
+	width: 100px;
 	
-	
-	
+}
+.detail_wrap .title h2 {
+	font-size: 30px;
+	color: #224d89;
+	text-align: center;
+	line-height: 80px;
+	font-weight: bolder;
+}
+.detail_wrap .date {
+	padding: 0 0 0 15px;
+	width: 85%;
+	border-left: 2px solid #9d9d9d;
+}
+.detail_wrap .date p {
+	font-size: 18px;
+	color: #151515;
+	line-height: 23px;
+	font-weight: bolder;
+	text-indent: 15px;
+} 
+.detail_wrap .title,.date {
+	display: inline-block;
+	vertical-align: top;
 }
