--- a/application/index/view/header.html
+++ b/application/index/view/header.html
@@ -6,6 +6,7 @@
         <ul>
                 <li><a href="/index/index/index">基因寻祖</a></li>
                 <li><a href="/index/gene/index">我的基因</a></li>
+                <!-- <li><a href="/index/index/my_information">我的基因</a></li>  -->
                 <li><a href="/index/buy/buy">购买</a></li>
                 <li><a href="/index/referral/referral">寻根故事</a></li>
                 <!-- <li><a href="/index/buy/my_order">我的订单</a></li> -->
