--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -24,14 +24,17 @@
             </div>
 
             <div class="swiper-wrapper">
-                <div class="swiper-slide">
+                <div class="swiper-slide" >
                     <img src="__STATIC__/images/home/banner1.jpg">
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide" >
                     <img src="__STATIC__/images/home/banner2.jpg">
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide" >
                     <img src="__STATIC__/images/home/banner3.jpg">
+                </div>
+                <div class="swiper-slide" >
+                    <img src="__STATIC__/images/home/banner4.jpg">
                 </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -46,7 +49,8 @@
                             <p>Y - STR数据<br />检测对比报告</p>
                         </div>
                         <!-- <a href="/index/index/import_data" class="btn" >导入数据</a> -->
-                        <a  class="btn" href="/index/index/information">导入数据</a>
+                        <a  class="btn" href="/index/index/import_data">导入数据</a>
+                        <!-- href="/index/index/information" 用户填写自己的信息 -->
                     </div>
                     <div class="gene-item">
                         <div class="text">
