--- a/application/index/view/login/login.html
+++ b/application/index/view/login/login.html
@@ -39,6 +39,7 @@
 		            <span class="select">账号登陆</span><span>微信登陆</span>
 		           </div>
 			       <ul id="con">
+					   444444
 			            <li class="show">
 			            	
 			            	<input placeholder="邮箱" id="email" class="login_username"/>
@@ -50,15 +51,19 @@
 			            		<a class="login_findpassworld" style="color: rgb(55,175,230);"  href="/index/login/register">注册新用户</a><span class="login-resign" style="color: rgb(55,175,230);">找回密码</span>
 			            	</div>
 			            	<div class="login_denglu" onclick="submit();">登录</div>
-			            </li>
-			            <li style="display: none;" class="erweima_ear" id="weixin_qrcode">
-			            	
+						</li>
+						5555555
+			            <li style="display: none;" class="erweima_ear">
+							<span id="weixin_qrcode"></span>
 			            	<!--二维码图片-->
 			            	<!-- <div >
 
 			            	</div>
-			            	<p style="text-align: center;padding-top: 10px;">请扫码登陆</p> -->
-			            </li>
+							<p style="text-align: center;padding-top: 10px;">请扫码登陆</p> -->
+							<!-- <div class="tips_ear"><span class="tip">注册即同意《23魔方服务协议》</span></div> -->
+							zi
+						</li>
+						77777
 			       </ul>
           </div>
 		</div>
