基因分析页面修改

--- a/public/static/index/css/home/chaxun_table.css
+++ b/public/static/index/css/home/chaxun_table.css
@@ -18,14 +18,17 @@ border-spacing:0;
 }
 
 tr{
-	
 	height: 36px;
 	line-height: 26px;
 	font-size: 12px;
 	text-align: center;
 }
-tr td{
-   width:16.66666%;
+tr td {
+	width:16.66666%;
+}
+tr td a {
+   display: block;
+   color: #007AFF;
 }
 .niandai{
 	line-height: .3rem;
