--- a/application/index/view/index/information.html
+++ b/application/index/view/index/information.html
@@ -29,28 +29,28 @@
 		        					<span class="name">姓名:</span>
 	        					</div>
 	        					<div class="text">
-	        						<input type="text" />
+	        						<input type="text" class="name"/>
 	        					</div>
 	        				</div>
 	        				
 	        				<div class="in">
 	        					<span class="name tr">民族:</span>
 	        					<div class="text">
-	        						<input type="text" />
+	        						<input type="text" class="mingzu"/>
 	        					</div>
 	        				</div>
 	        				
 	        				<div class="in">
 	        					<span class="name tr">现居地:</span>
 	        					<div class="text">
-	        						<input type="text" />
+	        						<input type="text" class="xianjudi"/>
 	        					</div>
 	        				</div>
 	        				
 	        				<div class="in">
 	        					<span class="name tr">派字:</span>
 	        					<div class="text">
-	        						<input type="text" />
+	        						<input type="text"  class="paizi"/>
 	        					</div>
 	        				</div>
 	        				
@@ -63,28 +63,28 @@
 		        					<span class="name">联系电话:</span>
 	        					</div>
 	        					<div class="text">
-	        						<input type="text" />
+	        						<input type="text" class="dianhua"/>
 	        					</div>
 	        				</div>
 	        				
 	        				<div class="in">
 	        					<span class="name tr">性别:</span>
 	        					<div class="text">
-	        						<input type="text" />
+	        						<input type="text" class="sex"/>
 	        					</div>
 	        				</div>
 	        				
 	        				<div class="in">
 	        					<span class="name tr">祖籍地:</span>
 	        					<div class="text">
-	        						<input type="text" />
+	        						<input type="text" class="zuji"/>
 	        					</div>
 	        				</div>
 	        				
 	        				<div class="in">
 	        					<span class="name tr">是否拥有家谱:</span>
 	        					<div class="text">
-	        						<input type="text" />
+	        						<input type="text" class="jiapu"/>
 	        					</div>
 	        				</div>
 	        				
@@ -94,19 +94,19 @@
 	        		<div class="are_wrap">
 	        			<span>迁移记录:</span>
 	        			<div class="are">
-    						<input type="text" />
+    						<input type="text" class="jilu"/>
     					</div>
 	        		</div>
 	        		<!--其他说明:-->
 	        		<div class="are_wrap">
 	        			<span>其他说明:</span>
 	        			<div class="are">
-    						<input type="text" />
+    						<input type="text" class="shuoming"/>
     					</div>
 					</div>
 		</form>			
 					<div class="personal_message_ear">
-						<input type="checkbox" checked/><span class="personal_message">是否公开个人信息</span>
+						<input type="checkbox" checked class="open"/><span class="personal_message">是否公开个人信息</span>
 						<br/>
 						基于寻根溯源的需要，族内鼓励选择公开，除非有特殊情况。选择不公开，则别人匹配出结果后将不能查看您的基本信息
 					</div>
@@ -127,14 +127,27 @@
 	    <!-- <script src="../../js/public/header.js"></script>  
 		<script src="../../js/public/footer.js"></script> -->
 		<script>
+			
 			$('.save_btn').click(function(){
 
 				$.ajax({
 					type:"POST",
-					url:"{:url('index/online_import_data1')}",
-					data:{},
+					url:"{:url('index/import_data1')}",
+					data:{
+						name:$(".name").val(),
+						nation:$(".mingzu").val(),
+						on_addr:$(".xianjudi").val(),
+						pai:$(".paizi").val(),
+						mobile:$(".dianhua").val(),
+						sex:$(".sex").val(),
+						addr_log :$(".zuji").val(),
+						is_family_tree:$(".jiapu").val(),
+						migration:$(".jilu").val(),
+						desc:$(".shuoming").val(),
+						is_open:$(".open").val()
+						},
 					dataType:"json",
-					success:function(res){
+					success:function(res){	
 						console.log(res)
 					}
 				})
