--- a/application/index/view/footer.html
+++ b/application/index/view/footer.html
@@ -7,18 +7,17 @@
                     <li><a href="#">关注/联系</a></li>
                     <li><a href="#">基因寻祖</a></li>
                     <li><a href="#">关于我们</a></li>
-                    <li><a href="#">二维码</a></li>
                     <li><a href="#">寻根故事</a></li>
                     <li><a href="#">加入我们</a></li>
                     <li><a href="#">联系邮箱</a></li>
-                    <li><a href="#">方志家谱</a></li>
                     <li><a href="#">服务协议</a></li>
-                    <li><a href="#">联系电话</a></li>
-                    <li><a href="#">帮助中心</a></li>
                     <li><a href="#">顾问委员会</a></li>
+                    <li><a href="#">帮助中心</a></li>
+                    <li><a href="#">联系电话</a></li>
                     <li><a href="#">购买</a></li>
                     <li><a href="#">隐私保护</a></li>
                     <li><a href="#">我的</a></li>
+                    <li><a href="#">隐私保护</a></li>
             </ul>
         </div>
         <div class="copyright">
