--- a/application/mobile/view/user/my_walet.html
+++ b/application/mobile/view/user/my_walet.html
@@ -28,9 +28,18 @@
 			
        
         <div class="yuqian">
+			<style>
+				.yuqian div{
+					padding:0px 20px;
+				}
+			</style>
         	<div>
-        	<p>余额</p>
-        	<p>{$info.money}</p>
+        		<p>余额</p>
+        		<p>{$info.money}</p>
+			</div>
+			<div>
+        		<p>积分</p>
+        		<p>{$info.integral}</p>
         	</div>
         </div>
 
