--- a/application/admin/view/distribution/setting.html
+++ b/application/admin/view/distribution/setting.html
@@ -43,6 +43,7 @@
 								<tr class="text-c">
 									<th width="100"></th>
 									<th width="100">佣金比例（消费金额 %）<i class="Hui-iconfont" onclick="open_msg('单笔消费金额的百分比，请填写大于0的整数或两位小数，0 表示不设置；如：填写比例 1，单笔消费1000元，用户获得的佣金为 10元，当分佣金额小于0.01元时不进行分佣，请合理设置分佣比例！')">&#xe633;</i> </th>
+									<th width="100">升级条件<i class="Hui-iconfont" onclick="open_msg('推荐多少人达到等级后，自动升级')">&#xe633;</i> </th>
 									<th width="100">最低佣金额度（元）<i class="Hui-iconfont" onclick="open_msg('单笔分佣金额最低额度，请填写大于0的整数或两位小数，0 表示不设置；如：最低佣金额度设置为 5元，用户获得的佣金小于该值时，实际获得的佣金为 5元')">&#xe633;</i> </th>
 									<th width="100">最高佣金额度（元）<i class="Hui-iconfont" onclick="open_msg('单笔分佣金额最高额度，请填写大于0的整数或两位小数，0 表示不设置；如：最低佣金额度设置为 10元，用户获得的佣金大于该值时，实际获得的佣金为 10元')">&#xe633;</i> </th>
 								</tr>
@@ -52,6 +53,7 @@
 									<input type="hidden" name="id[1]" />
 									<td>一级分销 <i class="Hui-iconfont" onclick="open_msg('进行消费的用户的直推上级用户')">&#xe633;</i></td>
 									<td><input type="text" class="input-text" style="text-align:center;" name="quota[1]" /></td>
+									<td><input type="text" class="input-text" style="text-align:center;" name="upgrade[1]" /></td>
 									<td><input type="text" class="input-text" style="text-align:center;" name="quota_min[1]" /></td>
 									<td><input type="text" class="input-text" style="text-align:center;" name="quota_max[1]" /></td>
 								</tr>
@@ -59,6 +61,7 @@
 									<input type="hidden" name="id[2]" />
 									<td>二级分销 <i class="Hui-iconfont" onclick="open_msg('进行消费的用户的直推上级用户的直推上级用户')">&#xe633;</i></td>
 									<td><input type="text" class="input-text" style="text-align:center;" name="quota[2]" /></td>
+									<td><input type="text" class="input-text" style="text-align:center;" name="upgrade[2]" /></td>
 									<td><input type="text" class="input-text" style="text-align:center;" name="quota_min[2]" /></td>
 									<td><input type="text" class="input-text" style="text-align:center;" name="quota_max[2]" /></td>
 								</tr>
@@ -66,6 +69,7 @@
 									<input type="hidden" name="id[3]" />
 									<td>三级分销 <i class="Hui-iconfont" onclick="open_msg('进行消费的用户的直推上级用户的直推上级用户')">&#xe633;</i></td>
 									<td><input type="text" class="input-text" style="text-align:center;" name="quota[3]" /></td>
+									<td><input type="text" class="input-text" style="text-align:center;" name="upgrade[3]" /></td>
 									<td><input type="text" class="input-text" style="text-align:center;" name="quota_min[3]" /></td>
 									<td><input type="text" class="input-text" style="text-align:center;" name="quota_max[3]" /></td>
 								</tr>
@@ -73,6 +77,7 @@
 									<input type="hidden" name="id[4]" />
 									<td>四级分销 <i class="Hui-iconfont" onclick="open_msg('进行消费的用户的直推上级用户的直推上级用户')">&#xe633;</i></td>
 									<td><input type="text" class="input-text" style="text-align:center;" name="quota[4]" /></td>
+									<td><input type="text" class="input-text" style="text-align:center;" name="upgrade[4]" /></td>
 									<td><input type="text" class="input-text" style="text-align:center;" name="quota_min[4]" /></td>
 									<td><input type="text" class="input-text" style="text-align:center;" name="quota_max[4]" /></td>
 								</tr>
@@ -80,6 +85,7 @@
 									<input type="hidden" name="id[5]" />
 									<td>五级分销 <i class="Hui-iconfont" onclick="open_msg('进行消费的用户的直推上级用户的直推上级用户')">&#xe633;</i></td>
 									<td><input type="text" class="input-text" style="text-align:center;" name="quota[5]" /></td>
+									<td><input type="text" class="input-text" style="text-align:center;" name="upgrade[5]" /></td>
 									<td><input type="text" class="input-text" style="text-align:center;" name="quota_min[5]" /></td>
 									<td><input type="text" class="input-text" style="text-align:center;" name="quota_max[5]" /></td>
 								</tr>
@@ -91,6 +97,7 @@
 								<tr class="text-c">
 									<th width="100"></th>
 									<th width="100">佣金比例（消费金额 %）<i class="Hui-iconfont" onclick="open_msg('单笔消费金额的百分比，请填写大于0的整数或两位小数，0 表示不设置；如：填写比例 1，单笔消费1000元，用户获得的佣金为 10元，当分佣金额小于0.01元时不进行分佣，请合理设置分佣比例！')">&#xe633;</i> </th>
+									<th width="100">升级条件<i class="Hui-iconfont" onclick="open_msg('推荐多少人达到等级后，自动升级')">&#xe633;</i> </th>
 									<th width="100">最低佣金额度（元）<i class="Hui-iconfont" onclick="open_msg('单笔分佣金额最低额度，请填写大于0的整数或两位小数，0 表示不设置；如：最低佣金额度设置为 5元，用户获得的佣金小于该值时，实际获得的佣金为 5元')">&#xe633;</i> </th>
 									<th width="100">最高佣金额度（元）<i class="Hui-iconfont" onclick="open_msg('单笔分佣金额最高额度，请填写大于0的整数或两位小数，0 表示不设置；如：最低佣金额度设置为 10元，用户获得的佣金大于该值时，实际获得的佣金为 10元')">&#xe633;</i> </th>
 								</tr>
@@ -107,8 +114,8 @@
 										{case 4}<td>四级分销 <i class="Hui-iconfont" onclick="open_msg('进行消费的用户的直推上级用户的直推上级用户')">&#xe633;</i></td>{/case}
 										{case 5}<td>五级分销 <i class="Hui-iconfont" onclick="open_msg('进行消费的用户的直推上级用户的直推上级用户')">&#xe633;</i></td>{/case}
 									{/switch}
-									
 									<td><input type="text" class="input-text" style="text-align:center;" name="quota[{$vo.id}]" value="{$vo.quota}" /></td>
+									<td><input type="text" class="input-text" style="text-align:center;" name="upgrade[{$vo.id}]" value="{$vo.upgrade}" /></td>
 									<td><input type="text" class="input-text" style="text-align:center;" name="quota_min[{$vo.id}]" value="{$vo.quota_min}" /></td>
 									<td><input type="text" class="input-text" style="text-align:center;" name="quota_max[{$vo.id}]" value="{$vo.quota_max}" /></td>
 								</tr>
