--- a/application/index/view/buy/buy.html
+++ b/application/index/view/buy/buy.html
@@ -101,6 +101,9 @@
 		</div>
 		<!-- 底部 -->
 		<div class="footer">
+			<style>
+				.footer img{width:100px;height:100px}
+			</style>
 			{include file="footer"}
 		</div>
 
