--- a/application/index/view/user/index.html
+++ b/application/index/view/user/index.html
@@ -41,7 +41,7 @@
 							<div class="imageEchoBox">
 								<!--回显的图片-->
 								<img class="preViewImg" src="{$avatar}"
-									style="width: 80px;height: 80;border-radius: 50%;" />
+									style="width: 80px;height: 80px;border-radius: 50%;" />
 								<!--上传图片 tyle='file'-->
 								<a class="uploadFile2" href="#">修改头像</a>
 								<input class="uploadFile" type="file" onchange="UpLoad(this)" name="file" id="" value="0"
