--- a/public/static/index/css/home/chaxun_table.css
+++ b/public/static/index/css/home/chaxun_table.css
@@ -170,5 +170,11 @@ tr td a {
 	transform: translate(-50%,-50%)
 
 }
+.lookmore{
+	padding:20px 0 100px 0;
+	width: 100%;
+	text-align: center;
+	cursor: pointer;
+}
 
 
