--- a/application/index/view/login/register.html
+++ b/application/index/view/login/register.html
@@ -57,7 +57,7 @@
 					</div>
 
 					<div class="resigter_submit" onclick="submit();">提交</div>
-					<div class="tips_ear"><span class="tip">注册即同意《23魔方服务协议》</span></div>
+					<div class="tips_ear"><a class="tip">注册即同意《服务协议》</a></div>
 					<!--<div class="weixin_ear">
 
 						<p><img src="__STATIC__/images/resigter/we_chat_icon.png" /></p>
