--- a/application/index/view/index/import_data.html
+++ b/application/index/view/index/import_data.html
@@ -77,7 +77,7 @@
                               <input type="file" name="myfile" id="myfile" value="" onchange="checkField()" class="selectFile"/>
                             	<img src="__STATIC__/images/home/shibai.png" class="cuo_pic" />
                             	<img src="__STATIC__/images/home/dui_pic.png" class="dui_pic" />
-                             <p class="tips">请直接上传您从测序厂商获取的原始.ZIP .RAR .XLS .XLSX格式</p>
+                             <p class="tips">请直接上传您从测序厂商获取的原始.XLS .XLSX格式</p>
                             
                         </div>
                     </div>
