--- a/application/mobile/view/user/set_up.html
+++ b/application/mobile/view/user/set_up.html
@@ -87,29 +87,29 @@
 							</div>
 						</div>
 					</div>
-					<div class="item">
+					<!-- <div class="item">
 						<div class="item_top drop_own" data-state="1" onclick="dropDownFun(this)">
 							<p class="fl"><span>手机</span></p>
 							<p class="fr">
 								<span id="phoneVal">{$user.mobile}</span>
 							</p>
 							<img src="__STATIC__/img/my/youjian2@2x.png" />
-						</div>
+						</div> -->
 						<!-- public 下拉框 -->
-						<div class="drop_down_box">
+						<!-- <div class="drop_down_box"> -->
 							<!--绑定手机-->
-							<div class="drop_down_bind_wrap">
+							<!-- <div class="drop_down_bind_wrap">
 								<div class="drop_down_bind_box">
 									<p class="drop_down_bind_box_titile">{if condition="$user.mobile"}修改{else /}绑定{/if}手机号:</p>
 									<input class="drop_down_bind_box_inp" type="number" id="mobile" class="" placeholder="请输入手机号">
 								</div>
-							</div>
+							</div> -->
 							<!--按钮-->
-							<div class="drop_down_btn_box">
+							<!-- <div class="drop_down_btn_box">
 								<p class="drop_down_btn binding_but">确定</p>
 							</div>
 						</div>
-					</div>
+					</div> -->
 					{if condition="!$user['email']"}
 					<div class="item" onclick="javascript:location.href='/mobile/user/edit_email'">
 						<div class="item_top">
