--- a/application/index/view/footer.html
+++ b/application/index/view/footer.html
@@ -10,12 +10,12 @@
                     <li><a href="#">寻根故事</a></li>
                     <li><a href="#">加入我们</a></li>
                     <li><a href="#">联系邮箱</a></li>
-                    <li><a href="#">服务协议</a></li>
+                    <li><a target="_blank" href="{:url('article/details','',false)}?id=31">服务协议</a></li>
                     <li><a href="#">顾问委员会</a></li>
                     <li><a href="#">帮助中心</a></li>
                     <li><a href="#">联系电话</a></li>
                     <li><a href="#">购买</a></li>
-                    <li><a href="#">隐私保护</a></li>
+                    <li><a target="_blank" href="{:url('article/details','',false)}?id=32">隐私保护</a></li>
                     <li><a href="#">我的</a></li>
                   
             </ul>
