--- a/application/mobile/view/user/import_online.html
+++ b/application/mobile/view/user/import_online.html
@@ -33,7 +33,7 @@
                 </p>
                 <p class="person_message">
                 	<label><span style="color:red;width:unset;border:0px;">*</span>联系方式:</label>
-                	<span><input type="text" name="mobile" /></span>
+                	<span><input type="text" name="mobile" value='{:session("mobile","","mobile")}' /></span>
                 </p>
                 <p class="person_message">
                 	<label>民族:</label>
@@ -202,7 +202,7 @@
           </div> 
           <button class="save" type="submit" style="margin-left:35%;">提交保存</button>
           </form>
-		<!--<iframe name="ajaxR" style="display:block;width:100%;height:500px;"></iframe>-->
+		<iframe name="ajaxR" style="display:block;width:100%;height:500px;"></iframe>
 		<script type="text/javascript" src="__STATIC__/js/public/jquery-1.8.3.js"></script>
         <script type="text/javascript" src="__STATIC__/js/public/public.js"></script>
         <script type="text/javascript" src="/public/static/public/layer/layer.js"></script>
