--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -32,13 +32,13 @@
 				<div class="swiper-container banner-wrap-zp">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
-							<img src="__STATIC__/img/home/tupian@2x.png" />
+							<img src="__STATIC__/img/home/banner1.jpg" />
 						</div>
 						<div class="swiper-slide">
-							<img src="__STATIC__/img/home/tupian@2x.png" />
+							<img src="__STATIC__/img/home/banner2.jpg" />
 						</div>
 						<div class="swiper-slide">
-							<img src="__STATIC__/img/home/tupian@2x.png" />
+							<img src="__STATIC__/img/home/banner3.jpg" />
 						</div>
 					</div>
 					<!-- <div class="swiper-pagination"></div> -->
